--- a/.env.prod.example
+++ b/.env.prod.example
@@ -16,6 +16,13 @@ DB_DATABASE=logiscope
 DB_USERNAME=root
 DB_PASSWORD=
 
+OLD_DB_CONNECTION=mysql
+OLD_DB_HOST=127.0.0.1
+OLD_DB_PORT=3306
+OLD_DB_DATABASE=logiscope_old
+OLD_DB_USERNAME=root
+OLD_DB_PASSWORD=
+
 LP_DB_CONNECTION=mysql
 LP_DB_HOST=127.0.0.1
 LP_DB_PORT=3306
